fix flicker bug

--- a/src/assets/css/mainModal.css
+++ b/src/assets/css/mainModal.css
@@ -14,7 +14,7 @@
 
 .mainModal__img {
   box-sizing: border-box;
-  height: max-content;
+  /* height: max-content; */
   max-width: 100%;
   padding-inline: 5vw;
   opacity: 0;
@@ -38,7 +38,6 @@
   width: min(60vw, 610px);
   height: 0px;
   background-color: rgb(249, 244, 244);
-  
   margin-inline: auto;
   margin-inline-start: min(20vw, 150px);
   opacity: 0.9;
@@ -168,9 +167,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    height: 100vh;
   }
-  .mainModal__img {
-  }
+
 
   .wrapper{
     position: static;
